--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
+    <h1 id="password"></h1>
+
+
     <script src="js/script.js"></script>
 </body>
 </html>
